# eclipse-predictor

./: Cargo.toml
snapshots/: 1640995200.state
src/: main.rs  snapshots.rs
src/simulation/: body.rs  mod.rs
