[package]
name = "himawari-moon"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric-algs = "0.4"
nalgebra = "0.26"
num = "*"
chrono = "0.4"
