[package]
name = "himawari-moon"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.0"
image = "0.24"
nalgebra = "0.26"
num = "*"
numeric-algs = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.6"
